SMS in progress and working authentication
